--- a/Notebook/cdp.tex
+++ b/Notebook/cdp.tex
@@ -83,7 +83,7 @@ To verify the system clock, use \verb|show clock [detail]| command. To identify 
 
 \subsection{Introduction}
 
-The syslog protocol allows networking devices to send their system messages across the network to syslog servers. The syslog server serves as an event message collector. Syslog messages are sent using UDP port 514. The syslog logging service provides three primary functions:
+The syslog protocol allows networking devices to send their system messages across the network to syslog servers. The syslog server serves as an event message collector. Syslog messages are sent using \textbf{UDP} port \textbf{514}. By default, the logging trap level is \textbf{6}. The syslog logging service provides three primary functions:
 
 \begin{itemize}
 \item Gather logging information
