--- a/Notebook/CCNA notebook.tex
+++ b/Notebook/CCNA notebook.tex
@@ -20,8 +20,10 @@
 \include{ReferenceModel}
 \include{LANdesign}
 \include{WANconcepts}
+\include{NetworkEvolution}
 
 \part{SWITCHING TECHNOLOGIES}
+\include{Switch}
 \include{VLAN}
 \include{vtp}
 \include{stp}
@@ -38,7 +40,7 @@
 \part{WAN TECHNOLOGIES}
 \include{PPP}
 \include{GRE,eBGP}
-\include{QoS}o
+\include{QoS}
 
 \part{INFRASTRUCTURE SERVICE}
 \include{dhcp}
