--- a/Notebook/EtherChannel.tex
+++ b/Notebook/EtherChannel.tex
@@ -12,43 +12,46 @@
 
 \section{Port Aggregation Protocol (PagP)}
 
-PAgP (pronounced ``Pag – P”) is a Cisco-proprietary protocol that aids in the  creation of EtherChannel links. PAgP helps create the EtherChannel link by detecting the configuration of each side and ensuring that links are compatible so that the EtherChannel link can be enabled when needed. PAgP can be configured in one of three models:
+PAgP (pronounced ``Pag – P”) is a \textbf{Cisco-proprietary} protocol that aids in the  creation of EtherChannel links. PAgP helps create the EtherChannel link by detecting the configuration of each side and ensuring that links are compatible so that the EtherChannel link can be enabled when needed. PAgP can be configured in one of three models:
 
 \begin{itemize}
-\item \textbf{On} -- This mode forces the interface to channel without PAgP. Interfaces configured in the on mode do not exchange PAgP packets.
-\item \textbf{PAgP Active} -- This PAgP mode places an interface in an active negotiating state in which the interface initiates negotiations with other interfaces by sending PAgP packets.
-\item \textbf{PAgP Passive} -- This PAgP mode places an interface in a passive negotiating state in which the interface responds to the PAgP packets that it receives, but does not initiate PAgP negotiation.
+\item \textbf{On} -- This mode forces the interface to channel without PAgP. Interfaces configured in this mode do not exchange PAgP packets.
+\item \textbf{PAgP Desirable} -- The interface in this mode \emph{initiates negotiations} with other interfaces by sending PAgP packets.
+\item \textbf{PAgP Auto} -- The interface in this mode only responds to the PAgP packets that it receives, but does not initiate PAgP negotiation.
 \end{itemize}
 
-The modes must be compatible on each side as shown in table \ref{PAgP-mode}.
+The modes must be compatible on each side as shown in table \ref{PAgP-mode}. Otherwise, the status of port-channel will become \verb|err-disabled|.
+
 
 \begin{table}[htbp]
-\caption{PAgP Establishment}
+\centering \caption{PAgP Establishment}
 \label{PAgP-mode}
 \begin{tabular}{|l|l|l|}
 \hline
 S1             & S2                & EtherChannel establishment \\ \hline
-Active      & Passive/Active    & Yes                        \\ \hline
+Desirable      & Auto/Desirable    & Yes                        \\ \hline
 On             & On                & Yes                        \\ \hline
-Passive           & Passive/On           & No                         \\ \hline
-Not configured & Passive/Active/On & No                         \\ \hline
-Active      & on                & No                         \\ \hline
+Auto           & Auto/On           & No                         \\ \hline
+Not configured & Auto/Desirable/On & No                         \\ \hline
+Desirable      & on                & No                         \\ \hline
 \end{tabular}
 \end{table}
 
+
+
 \section{Link Aggregation Control Protocol (LACP)}
 
-LACP is part of an 802.3ad that aids in the  creation of EtherChannel links. Because LACP is an IEEE standard, it can be used to facilitate EtherChannels in multivendor environments, including Cisco devices. LACP allows for eight active links, and also eight standby links. A standby link will become active should one of the current active links fail. PAgP can be configured in one of three models:
+LACP is a \emph{standard-based} protocol and is a part of an \emph{802.3ad} that aids in the  creation of EtherChannel links. Because LACP is an IEEE standard, it can be used to facilitate EtherChannels in \emph{multivendor} environments, including Cisco devices. LACP allows for eight active links, and also eight standby links. A standby link will become active should one of the current active links fail. PAgP can be configured in one of three models:
 
 \begin{itemize}
-\item \textbf{On} -- This mode forces the interface to channel without LACP. Interfaces configured in the on mode do not exchange LACP packets.
-\item \textbf{LACP active} -- Similar to PAgP Active mode.
-\item \textbf{LACP passive} -- Similar to PAgP Passive mode. negotiation.
+\item \textbf{On} -- This mode forces the interface to channel without LACP. Interfaces configured in this mode do not exchange LACP packets.
+\item \textbf{LACP Active} -- The interface in this mode \emph{initiates negotiations} with other interfaces by sending LACP packets.
+\item \textbf{LACP Passive} -- The interface in this mode only responds to the LACP packets that it receives, but does not initiate  LACP.
 \end{itemize}
 
-The modes must be compatible on each side as shown in table \ref{PAgP-mode}.
+The modes must be compatible on each side as shown in table \ref{LACP-mode}.
 \begin{table}[htbp]
-\caption{LACP Establishment}
+\centering\caption{LACP Establishment}
 \label{LACP-mode}
 \begin{tabular}{|l|l|l|}
 \hline
